# hpm

./: README.md
cmake_annotate/: application.cmake  cmake-ext.cmake  hpm-sdk-config.cmake  python.cmake  readme.txt
project/: CMakeLists.txt  getSiFileList.cmd  readme.txt
project/src/: main.c  nor_flash.h  systick.c  watch_dog.c
project_app/: CMakeLists.txt  application.icf  getSiFileList.cmd  make_project.cmd  run.bat
project_app/API/inc/: Api_CommandQueue.h  Api_Crc.h  Api_Flash.h  Api_Math.h  Api_UsbDevice.h
project_app/API/src/: Api_CommandQueue.c  Api_Crc.c  Api_Flash.c  Api_UsbDesc.c  Api_UsbDevice.c
project_app/Customer/: BoardId.h  Customer.h  CustomerAlgPara_Default.h  CustomerAlgPara_Seewo.h  Customer_Default.h  Customer_Seewo.c  Customer_Seewo.h  HardWareInfo.h
project_app/alg/inc/: AlgApiMath.h  AlgApiStdint.h  AlgBaseStructure.h  AlgCustomer.h  AlgDefaultDefined.h
project_app/src/: main.c
project_app/user/inc/: Calibration.h  CommService.h  Command.h  Communication.h  Evaluation.h  FlashPara.h  GlobalDataStructure.h  GlobalDefaultDefine.h  GlobalVariables.h  HardWareInfo.h  ProtocolAnalysis.h  TouchSignal.h  app_systick.h  user_config.h
project_app/user/src/: Calibration.c  CommService.c  Communication.c  Evaluation.c  FlashPara.c  GlobalVariables.c  HardWareInfo.c  TouchSignal.c  app_systick.c  app_watch_dog.c  main.c
project_boot/: CMakeLists.txt  getSiFileList.cmd  readme.txt
project_boot/API/inc/: Api_Flash.h  Api_UsbDesc.h  Api_UsbDevice.h
project_boot/API/src/: Api_Flash.c  Api_Math.c  Api_UsbDesc.c  Api_UsbDevice.c
project_boot/user/inc/: Command.h  Communication.h  GlobalDataStructure.h  GlobalDefaultDefine.h  GlobalVariables.h  Upgrade.h  app_systick.h  usb_config.h  user_config.h
project_boot/user/src/: CommService.c  Communication.c  Upgrade.c  app_systick.c  app_usb_boot.c  main.c
project_hpm5300evk/: CMakeLists.txt  getSiFileList.cmd  make_project.cmd
project_hpm5300evk/src/: app_adc.c  app_adc.h  app_dac.c  app_dac.h  app_dma_mgr.c  app_dma_mgr.h  app_flash.c  app_flash.h  app_otp.c  app_otp.h  app_pwm.c  app_pwm.h  app_systick.c  app_systick.h  app_tim.c  app_tim.h  app_tsns.c  app_tsns.h  main.c  nor_flash.c  nor_flash.h  otp_func.c  systick.c  systick.h  usb_dev_boot.c  user_config.h  watch_dog.c
project_hpm6750evk/: CMakeLists.txt  HPMProject_si4project_filelist.py  getSiFileList.cmd  make_project.cmd
project_hpm6750evk/src/: main.c  nor_flash.c  otp_func.h  pwm_beep.c  pwm_rgb_led.h  usb_dev_boot.c  user_config.h
sdk_env/: CHANGELOG.md  cmd_params.yaml  generate_all_ses_projects.cmd  remove_all_ses_projects.cmd
sdk_env/hpm_sdk/: CHANGELOG.md  CMakeLists.txt  README.md  README_zh.md
sdk_env/hpm_sdk/boards/hpm5300evk/: board.c  board.h  hpm5300evk.yaml  pinmux.c  pinmux.h
sdk_env/hpm_sdk/boards/hpm6200evk/: board.c  board.h
sdk_env/hpm_sdk/boards/hpm6300evk/: board.c  board.h
sdk_env/hpm_sdk/boards/hpm6750evk/: board.c  board.h  pinmux.c  pwm_beep.c  pwm_rgb_led.c
sdk_env/hpm_sdk/boards/hpm6750evk2/: board.c  board.h  pinmux.c
sdk_env/hpm_sdk/boards/hpm6750evkmini/: board.c  board.h  hpm6750evkmini.yaml  pinmux.c
sdk_env/hpm_sdk/cmake/: application.cmake  cmake-ext.cmake
sdk_env/hpm_sdk/drivers/: CMakeLists.txt
sdk_env/hpm_sdk/drivers/inc/: hpm_adc16_drv.h  hpm_common.h  hpm_i2c_drv.h  hpm_opamp_drv.h  hpm_pwm_drv.h  hpm_qeo_drv.h  hpm_sei_drv.h  hpm_spi_drv.h  hpm_uart_drv.h  hpm_usb_drv.h
sdk_env/hpm_sdk/drivers/src/: hpm_adc16_drv.c  hpm_dac_drv.c  hpm_enet_drv.c  hpm_i2c_drv.c  hpm_pmp_drv.c  hpm_qeo_drv.c  hpm_sei_drv.c  hpm_spi_drv.c  hpm_uart_drv.c  hpm_usb_drv.c
sdk_env/hpm_sdk/samples/hello_world/: CMakeLists.txt
sdk_env/hpm_sdk/samples/hello_world/src/: hello_world.c  nor_flash.c  nor_flash.h  otp_func.c  otp_func.h  pwm_beep.h  pwm_rgb_led.c  pwm_rgb_led.h  usb_dev_app.c  usb_dev_boot.c  user_config.h
sdk_env/hpm_sdk/soc/HPM5361/: HPM5361_svd.xml  hpm_clock_drv.c  hpm_clock_drv.h  hpm_csr_regs.h  hpm_dmamux_regs.h  hpm_dmamux_src.h  hpm_gpiom_regs.h  hpm_gpiom_soc_drv.h  hpm_interrupt.h  hpm_ioc_regs.h  hpm_iomux.h  hpm_mcan_soc.h  hpm_pcfg_regs.h  hpm_pdgo_regs.h  hpm_pmic_iomux.h  hpm_ppor_drv.h  hpm_ppor_regs.h  hpm_ses_reg.xml  hpm_ses_riscv_cpu_regs.xml  hpm_soc.h  hpm_soc_feature.h  hpm_sysctl_drv.c  hpm_sysctl_drv.h  hpm_sysctl_regs.h  hpm_trgm_regs.h  hpm_trgm_soc_drv.h  hpm_trgmmux_src.h  soc_modules.list
sdk_env/hpm_sdk/soc/HPM6280/: hpm_clock_drv.c  hpm_clock_drv.h  hpm_pcfg_drv.h  hpm_soc_feature.h
sdk_env/hpm_sdk/soc/HPM6360/: hpm_clock_drv.c  hpm_clock_drv.h  hpm_soc_feature.h
sdk_env/hpm_sdk/soc/HPM6750/: hpm_clock_drv.c  hpm_clock_drv.h  hpm_pcfg_drv.h  hpm_soc_feature.h  hpm_sysctl_drv.h
sdk_env/hpm_sdk/soc/ip/: hpm_acmp_regs.h  hpm_adc16_regs.h  hpm_bacc_regs.h  hpm_bkey_regs.h  hpm_bmon_regs.h  hpm_bsec_regs.h  hpm_butn_regs.h  hpm_cam_regs.h  hpm_can_regs.h  hpm_conctl_regs.h  hpm_crc_regs.h  hpm_dac_regs.h  hpm_dao_regs.h  hpm_ewdg_regs.h  hpm_exip_regs.h  hpm_femc_regs.h  hpm_gpio_regs.h  hpm_gptmr_regs.h  hpm_hall_regs.h  hpm_i2c_regs.h  hpm_i2s_regs.h  hpm_jpeg_regs.h  hpm_keym_regs.h  hpm_lcdc_regs.h  hpm_mbx_regs.h  hpm_mchtmr_regs.h  hpm_mipi_dsi_regs.h  hpm_mmc_regs.h  hpm_mon_regs.h  hpm_mono_regs.h  hpm_opamp_regs.h  hpm_ptpc_regs.h  hpm_qei_regs.h  hpm_qeo_regs.h  hpm_rdc_regs.h  hpm_rng_regs.h  hpm_rtc_regs.h  hpm_sdadc_regs.h  hpm_sdxc_regs.h  hpm_sec_regs.h  (+10 more)
sdk_env/tools/project_generator/: README.txt
sdk_env/tools/scripts/: generate_board_ses_projects.cmd  generate_project.cmd  program_flash.cmd
(+734 files in other folders)
